<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:padding="16dp">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/user_profile"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryBackground"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/profile_title"
        android:src="@drawable/headshot" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/profile_picture"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@id/profile_picture"
        android:text="@string/philip_black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/profile_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_name"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@id/profile_picture"
        android:text="@string/android_developer"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_job"
        android:layout_marginVertical="4dp"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@id/profile_picture"
        android:text="@string/philip_location"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_location"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@id/profile_picture"
        android:background="@color/colorPrimaryLight"
        android:hint="Set Status"
        android:paddingHorizontal="4dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_update_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_status"
        android:layout_alignRight="@id/profile_status"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_button"
        android:paddingHorizontal="8dp"
        android:text="Update Status"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_picture"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthday_04_04_1991"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:text="@string/qualifications_unt_graduate"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linkedin"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:text="@string/employed_true"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/philip_email"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>